<resources>
    <string name="app_name">Parking Control</string>
    <string name="welcome_system">Bienvenido a Parking System</string>
    <string name="login_to_start">Iniciá sesión para empezar</string>
    <string name="input_login">Usuario (E-Mail)</string>
    <string name="input_password">Contraseña</string>
    <string name="input_password_repeat">Repetir contraseña</string>
    <string name="input_name">Nombre</string>
    <string name="input_email">Correo electrónico</string>
    <string name="button_login">Iniciar sesión</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="register">Registrarse</string>
    <string name="image_car">Red Car</string>
    <string name="title_activity_system">System</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="not_found_parkings">Aún no hay parqueos registrados</string>
    <string name="dialog_register_parking">Registrar parqueo</string>
    <string name="menu_parking">Parqueos</string>
    <string name="total_parkings">Total de parqueos</string>
    <string name="total_time">Total de tiempo</string>
    <string name="menu_account">Cuenta</string>
    <string name="menu_close_session">Cerrar sesión</string>
    <string name="unavailable_time">No pudimos obtener el tiempo</string>
    <string name="missing_car_registration">Debe ingresar su matricula</string>
    <string name="missing_time">Debe ingresar el tiempo de estadia</string>
    <string name="added_parking">El parqueo ha sido agregado exitosamente</string>
    <string name="register_image_alt">2 persons with plus button</string>
    <string name="number_zero">0</string>
</resources>