<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/dialog_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/dialog_register_parking"
            android:textColor="#E91E63"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/text_registration_car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Nro de matrícula"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/text_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Tiempo"
            android:inputType="number"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dialog_cancel"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:gravity="end"
                android:text="@string/cancel"
                android:textColor="#D15D85" />

            <TextView
                android:id="@+id/dialog_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:gravity="end"
                android:text="@string/accept"
                android:textColor="#E91E63" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>